--- a/style.css
+++ b/style.css
@@ -21,4 +21,8 @@ body{
 }
 .gamebox div{
     border:solid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 10rem;
 }
