--- a/style.css
+++ b/style.css
@@ -11,7 +11,19 @@ body{
     /* justify-content: center; */
     align-items: center;
 }
+.headandgamebox{
+    border: solid;
+    display: flex;
+    color:white;
+    flex-direction: column;
+    align-items: center;
+
+}
+.header{
+    font-size: 4rem;
+}
 .gamebox{
+    color:black;
     background-color: white;
     display: grid;
     grid-template-columns: repeat(3,1fr);
@@ -20,7 +32,7 @@ body{
     height:45rem;
 }
 .gamebox div{
-    border:solid;
+    border:solid black;
     display: flex;
     justify-content: center;
     align-items: center;
